--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# Quarto files
 /.quarto/
 _site
+
+# R files
+.Rhistory
+.Rapp.history
+.RData
+.RDataTmp
+.Ruserdata
+.Rproj.user/
+*_cache/
+/cache/
+*.utf8.md
+*.knit.md
+.Renviron
+
+# Jupyter cache
+.jupyter_cache
