--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: 1.2.112
 
       - name: Render Site
         uses: quarto-dev/quarto-actions/render@v2
