--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -25,6 +25,10 @@ jobs:
       - name: Render Site
         uses: quarto-dev/quarto-actions/render@v2
 
+      - name: No Jekyll
+        run: |
+          touch _site/.nojekyll
+
       - name: Publish
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
