--- a/materials/_sidebar.yml
+++ b/materials/_sidebar.yml
@@ -3,6 +3,7 @@ website:
     - title: "Materials"
       contents:
         - materials.md
+        # Only edit from this line down
         - section: "Developer Guidelines"
           contents:
             - materials/01-render_guidelines.md
