--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,3 +49,5 @@ website:
       - icon: twitter
         href: https://twitter.com/bioinfocambs
         aria-label: Bioinformatics Training Facility Twitter
+  sidebar:
+    - title: "Home"
