add course files documentation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ project:
     - setup.md
     - materials.md
     - materials/*
+    - "!course_files/*"
+    - "!_no-render"
 
 format: courseformat-html
 
