--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,5 +52,6 @@ website:
       - icon: twitter
         href: https://twitter.com/bioinfocambs
         aria-label: Bioinformatics Training Facility Twitter
+    title: "Course Title"
   sidebar:
     - title: "Home"
