--- a/_extensions/courseformat/_extension.yml
+++ b/_extensions/courseformat/_extension.yml
@@ -6,5 +6,7 @@ contributes:
     html:
       theme: [default, theme.scss]
       toc: true
+      number-sections: true
+      number-depth: 3
       code-link: true
       code-copy: true
