--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -20,10 +20,11 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: 1.2.112
+          version: 1.3.450
 
       - name: Render Site
-        uses: quarto-dev/quarto-actions/render@v2
+        run: |
+          quarto render
 
       - name: No Jekyll
         run: |
