--- a/_quarto.yml
+++ b/_quarto.yml
@@ -53,7 +53,7 @@ book:
   chapters:
     - part: "Welcome"
       chapters:
-        - text: "Introduction"
+        - text: "Overview"
           href: index.md
         - text: "Data & Setup"
           href: setup.md
