--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,9 @@ book:
       - icon: twitter
         href: https://twitter.com/bioinfocambs
         aria-label: Bioinformatics Training Facility Twitter
+      - icon: mastodon
+        href: https://genomic.social/@BioInfoCambs
+        aria-label: Bioinformatics Training Facility Mastodon
     title: "Course Development Guidelines"
   chapters:
     - part: "Welcome"
