add citation CFF and information about authorship

--- a/materials/_chapters.yml
+++ b/materials/_chapters.yml
@@ -4,3 +4,4 @@ book:
       chapters:
         - materials/01-render_guidelines.md
         - materials/02-content_guidelines.md
+        - materials/03-authorship.md
