add cross-referencing; adjust options and docs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,8 +14,9 @@ project:
     - "!materials/*/no_render"
 
 format: courseformat-html
-number-exercises: true
-hide-answers: false
+exercises:
+  number: true
+  hide-answers: false
 
 filters:
   - courseformat
