--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,20 +42,19 @@ book:
     center: |
       Licensed [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/) 
       ![](https://creativecommons.org/images/deed/cc_icon_black_x2.png){width=25px} 
-      Bioinformatics Training Facility
+      Cambridge Research Informatics Training
   navbar:
     pinned: true
     logo: "_extensions/courseformat/img/university_crest_reversed.png"
     right:
-      - icon: github
+      - text: "{{< iconify fa6-brands github size=lg title='CRIT GitHub' >}}"
         href: https://github.com/cambiotraining/
-        aria-label: Bioinformatics Training Facility GitHub
-      - icon: twitter
-        href: https://twitter.com/bioinfocambs
-        aria-label: Bioinformatics Training Facility Twitter
-      - icon: mastodon
+      - text: "{{< iconify fa6-brands bluesky size=lg title='CRIT Bluesky' >}}"
+        href: https://bsky.app/profile/bioinfocambs.bsky.social
+      - text: "{{< iconify fa6-brands mastodon size=lg title='CCRIT Mastodon' >}}"
         href: https://genomic.social/@BioInfoCambs
-        aria-label: Bioinformatics Training Facility Mastodon
+      - text: "{{< iconify mdi web size=lg title='CCRIT Website' >}}"
+        href: https://bioinfotraining.bio.cam.ac.uk/
     title: "Course Development Guidelines"
   chapters:
     - part: "Welcome"
