add lighbox; fix #22

--- a/_extensions/courseformat/_extension.yml
+++ b/_extensions/courseformat/_extension.yml
@@ -10,6 +10,7 @@ contributes:
       number-depth: 3
       code-link: true
       code-copy: true
+      lightbox: true
   shortcodes:
     - star_levels.lua
     - citation_cff.lua
