update guidelines and setup scripts

--- a/materials/_chapters.yml
+++ b/materials/_chapters.yml
@@ -5,3 +5,4 @@ book:
         - materials/01-render_guidelines.md
         - materials/02-content_guidelines.md
         - materials/03-authorship.md
+        - materials/04-versions.md
