add customisation chapter

--- a/materials/_chapters.yml
+++ b/materials/_chapters.yml
@@ -6,3 +6,4 @@ book:
         - materials/02-content_guidelines.md
         - materials/03-authorship.md
         - materials/04-versions.md
+        - materials/05-customising.md
